    
8.  If (*THEN) was present in the first (true) branch of a conditional group,
    it was not handled as intended.
    
9.  Replaced RunTest.bat with the much improved version provided by Sheri
    Pierce.
   
10. A pathological pattern such as /(*ACCEPT)a/ was miscompiled, thinking that
    the first byte in a match must be "a".


Version 8.13 16-Aug-2011
------------------------

1.  The Unicode data tables have been updated to Unicode 6.0.0.

2.  Two minor typos in pcre_internal.h have been fixed.

3.  Added #include <string.h> to pcre_scanner_unittest.cc, pcrecpp.cc, and
    pcrecpp_unittest.cc. They are needed for strcmp(), memset(), and strchr()
    in some environments (e.g. Solaris 10/SPARC using Sun Studio 12U2).

4.  There were a number of related bugs in the code for matching backrefences
    caselessly in UTF-8 mode when codes for the characters concerned were
    different numbers of bytes. For example, U+023A and U+2C65 are an upper
    and lower case pair, using 2 and 3 bytes, respectively. The main bugs were:
    (a) A reference to 3 copies of a 2-byte code matched only 2 of a 3-byte
    code. (b) A reference to 2 copies of a 3-byte code would not match 2 of a
    2-byte code at the end of the subject (it thought there wasn't enough data
    left).

5.  Comprehensive information about what went wrong is now returned by
    pcre_exec() and pcre_dfa_exec() when the UTF-8 string check fails, as long
    as the output vector has at least 2 elements. The offset of the start of
    the failing character and a reason code are placed in the vector.

6.  When the UTF-8 string check fails for pcre_compile(), the offset that is
    now returned is for the first byte of the failing character, instead of the
    last byte inspected. This is an incompatible change, but I hope it is small
    enough not to be a problem. It makes the returned offset consistent with
    pcre_exec() and pcre_dfa_exec().
