@@ -870,12 +870,17 @@ for (;;)
     /* VVVVVVVVVVVVVVVVVVVVVVVVV */
 
     /* Non-capturing or atomic group, except for possessive with unlimited
-    repeat. Loop for all the alternatives. When we get to the final alternative
-    within the brackets, we used to return the result of a recursive call to
-    match() whatever happened so it was possible to reduce stack usage by
-    turning this into a tail recursion, except in the case of a possibly empty
-    group. However, now that there is the possiblity of (*THEN) occurring in
-    the final alternative, this optimization is no longer possible.
+    repeat. Loop for all the alternatives. 
+    
+    When we get to the final alternative within the brackets, we used to return
+    the result of a recursive call to match() whatever happened so it was
+    possible to reduce stack usage by turning this into a tail recursion,
+    except in the case of a possibly empty group. However, now that there is
+    the possiblity of (*THEN) occurring in the final alternative, this
+    optimization is no longer always possible.
+    
+    We can optimize if we know there are no (*THEN)s in the pattern; at present 
+    this is the best that can be done. 
 
     MATCH_ONCE is returned when the end of an atomic group is successfully
     reached, but subsequent matching fails. It passes back up the tree (causing
@@ -892,7 +897,20 @@ for (;;)
     for (;;)
       {
       if (op >= OP_SBRA || op == OP_ONCE) md->match_function_type = MATCH_CBEGROUP;
-      RMATCH(eptr, ecode + _pcre_OP_lengths[*ecode], offset_top, md, eptrb,
+
+      /* If this is not a possibly empty group, and there are no (*THEN)s in
+      the pattern, and this is the final alternative, optimize as described 
+      above. */
+
+      else if (!md->hasthen && ecode[GET(ecode, 1)] != OP_ALT)
+        {
+        ecode += _pcre_OP_lengths[*ecode];
+        goto TAIL_RECURSE;
+        }  
+
+      /* In all other cases, we have to make another call to match(). */
+
+      RMATCH(eptr, ecode + _pcre_OP_lengths[*ecode], offset_top, md, eptrb, 
         RM2);
       if (rrc != MATCH_NOMATCH &&
           (rrc != MATCH_THEN || md->start_match_ptr != ecode))
@@ -1264,16 +1282,25 @@ for (;;)
       }
 
     /* We are now at the branch that is to be obeyed. As there is only one,
-    we used to use tail recursion to avoid using another stack frame, except
-    when there was unlimited repeat of a possibly empty group. However, that
-    strategy no longer works because of the possibilty of (*THEN) being
-    encountered in the branch. A recursive call to match() is always required,
-    unless the second alternative doesn't exist, in which case we can just
-    plough on. */
+    we used always to use tail recursion to avoid using another stack frame,
+    except when there was unlimited repeat of a possibly empty group. However,
+    that strategy no longer works because of the possibilty of (*THEN) being
+    encountered in the branch. However, we can still use tail recursion if
+    there are no (*THEN)s in the pattern. Otherwise, a recursive call to
+    match() is always required, unless the second alternative doesn't exist, in
+    which case we can just plough on. */
 
     if (condition || *ecode == OP_ALT)
       {
       if (op == OP_SCOND) md->match_function_type = MATCH_CBEGROUP;
+      else if (!md->hasthen)
+        {
+        ecode += 1 + LINK_SIZE;
+        goto TAIL_RECURSE;
+        }  
+
+      /* A call to match() is required. */
+ 
       RMATCH(eptr, ecode + 1 + LINK_SIZE, offset_top, md, eptrb, RM49);
       
       /* If the result is THEN from within the "true" branch of the condition,
@@ -1292,7 +1319,10 @@ for (;;)
         }  
       RRETURN(rrc);
       }
-    else                         /* Condition false & no alternative */
+    
+     /* Condition false & no alternative; continue after the group. */
+      
+    else
       {
       ecode += 1 + LINK_SIZE;
       }
@@ -5945,6 +5975,7 @@ md->hitend = FALSE;
 md->mark = NULL;                        /* In case never set */
 
 md->recursive = NULL;                   /* No recursion at top level */
+md->hasthen = (re->flags & PCRE_HASTHEN) != 0;
 
 md->lcc = tables + lcc_offset;
 md->ctypes = tables + ctypes_offset;
